# sketricgen-sdk

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/examples/: basic_usage.py  error_handling.py
sketricgen/: __init__.py  client.py  config.py  exceptions.py  streaming.py  upload.py
sketricgen/models/: __init__.py  requests.py  responses.py
tests/: __init__.py
tests/fixtures/: __init__.py
