[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sketricgen"
version = "0.1.1"
description = "Python SDK for SketricGen Chat Server API"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Sketric Solutions", email = "dev@sketric.com"},
]
keywords = ["sketricgen", "sdk", "api", "workflow", "chat", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://sketric.com"
Documentation = "https://docs.sketric.com/sdk"
Repository = "https://github.com/sketric/sketric-sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["sketricgen"]

[tool.hatch.build.targets.sdist]
include = [
    "/sketricgen",
    "/README.md",
    "/pyproject.toml",
]

[tool.black]
target-version = ['py39']
line-length = 88

[tool.ruff]
target-version = "py39"
line-length = 88
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
